Scrollbar fixed

--- a/EventMate/WebContent/css/stylesheet.css
+++ b/EventMate/WebContent/css/stylesheet.css
@@ -147,7 +147,7 @@ background-color:#E6E6E6;
 /*  CSS found here http://konigi.com/tools/css-tooltips-and-speech-bubbles  */
 .bubble {
   position: relative;
-  background-color:#D0F5A9;
+  background-color:#E0F2F7;
   margin: 0;
   padding:10px;
   text-align:center;
@@ -165,7 +165,7 @@ background-color:#E6E6E6;
   position: absolute;
   display: block;
   content: "";  
-  border-color: #D0F5A9 transparent transparent transparent;
+  border-color: #E0F2F7 transparent transparent transparent;
   border-style: solid;
   border-width: 10px;
   height:0;
@@ -221,7 +221,8 @@ background-color:#E6E6E6;
   bottom:-19px;
   left:1em;
 }
-.message
+
+#m
 {
 	border:2px;
 	border-radius:25px;
@@ -233,9 +234,6 @@ background-color:#E6E6E6;
 	width:800px;
 	background-color:white;
 	overflow:scroll;
-	
-
-	
 }
 
 .sender
@@ -330,6 +328,15 @@ display: table-cell;
 	font-size:80%;
 	
 	color:rgb(51,181,229);
+	
+}
+
+.smallBlackFont
+{
+	font-family: 'Glegoo', serif;
+	font-size:80%;
+	
+	color:black;
 	
 }
 
